@@ -3,10 +3,10 @@ dnl Configuring Kahua
 dnl  process this file with "autoconf -I `gauche-config --ac`" to
 dnl  generate 'configure'.
 dnl
-dnl $Id: configure.ac,v 1.60 2007/07/03 07:12:12 bizenn Exp $
+dnl $Id: configure.ac,v 1.61 2007/07/05 07:46:20 bizenn Exp $
 dnl
 AC_PREREQ(2.59)
-AC_INIT(kahua, 1.1_pre10, info@kahua.org)
+AC_INIT(kahua, 1.1_pre11, info@kahua.org)
 AC_GAUCHE_INIT_EXT
 
 REQUIRED_GAUCHE_VERSION=0.8.10
